--- a/languages/built-in/zh-tw.yml
+++ b/languages/built-in/zh-tw.yml
@@ -399,6 +399,7 @@ status_telethon: Telethon 版本
 status_pyrogram: Pyrogram 版本
 status_pgm: PagerMaid 版本
 status_uptime: 運行時間
+status_memory: 記憶體佔用
 ## stats
 stats_des: 查看我的對話統計信息。
 stats_loading: 加載中 . . .
