Revert "feat(status): Add resource status metrics to status command reporting (TeamPGM/PagerMaid-Modify#30)"
This reverts commit ad744e03a0c677893fe1325725a170b8acf15d05.

--- a/languages/built-in/ja.yml
+++ b/languages/built-in/ja.yml
@@ -399,12 +399,7 @@ status_python: Python version
 status_telethon: Telethon version
 status_pyrogram: Pyrogram version
 status_pgm: PagerMaid version
-status_uptime: Uptime
-status_cpu: "システム CPU 使用率"
-status_ram: "システム RAM 使用率"
-status_swap: "SWAP 使用率"
-status_process_cpu: "PagerMaid CPU 使用率"
-status_process_ram: "PagerMaid RAM 使用率"
+status_uptime: Utime
 ## stats
 stats_des: Viewconversation statistics.
 stats_loading: ロードリング...
