--- a/languages/built-in/en.yml
+++ b/languages/built-in/en.yml
@@ -1,5 +1,5 @@
 ---
-#Chinese (Simplified)
+#English
 #main
 web_TypeError: Oops ~ Web interface is configured to bind to an invalid address.
 web_KeyError: Oops ~ Web interface configuration is missing in the config file.
@@ -306,7 +306,7 @@ apt_des: Used to manage plugins installed to PagerMaid-Pyro.
 apt_parameters: "{update|search|show|status|install|remove|enable|disable|upload|export} <plugin name/file>"
 apt_name: "PagerMaid-Pyro Plugins Manager"
 apt_processing: Installing plugins...
-apt_no_py: Something went wrong ~ Failed to get the plug-in file from the attachment.
+apt_no_py: Something went wrong ~ Failed to get the plugin file from the attachment.
 apt_plugin: plugin
 apt_installed: installed
 apt_reboot: PagerMaid-Pyro is reloading.
@@ -316,12 +316,12 @@ apt_no_update: no need to update
 apt_remove_success: The plugin was successfully removed
 apt_remove: remove plugin
 apt_removed_plugins: removed plugins
-apt_not_exist: Something went wrong ~ The specified plug-in does not exist.
+apt_not_exist: Something went wrong ~ The specified plugin does not exist.
 apt_no_running_plugins: There are no running plugins.
 apt_no_load_failed_plugins: No failed plugins loaded
 apt_no_disabled_plugins: Plugins that are not disabled
-apt_plugin_list: Plug-in list
-apt_plugin_list_des: "Use `-apt list <page>` to view a specific page."
+apt_plugin_list: Plugin list
+apt_plugin_list_des: "Use `,pkg list <page>` to view a specific page."
 apt_plugin_running: running
 apt_plugin_disabled: disabled
 apt_plugin_failed: failed to load
@@ -330,16 +330,16 @@ apt_enable: enabled
 apt_disable: disabled
 apt_uploading: uploading plugin...
 apt_updated: updated
-apt_why_not_install_a_plugin: Install a plug-in in the warehouse and try again?
-apt_loading_from_online_but_nothing_need_to_update: "Reading cloud plug-in list...Done\nReading local plug-in version information...Done\n**There are no plug-ins that need to be updated. **"
-apt_loading_from_online_and_updating: "Reading cloud plug-in list...complete\nreading local plug-in version information...complete\nupdating plug-in..."
-apt_reading_list: "Reading cloud plug-in list...complete\nreading local plug-in version information...complete\n"
-apt_search_no_name: How can I search without a plug-in name?
+apt_why_not_install_a_plugin: Install a plugin in the warehouse and try again?
+apt_loading_from_online_but_nothing_need_to_update: "Reading cloud plugin list...Done\nReading local plugin version information...Done\n**There are no plugins that need to be updated. **"
+apt_loading_from_online_and_updating: "Reading cloud plugin list...complete\nreading local plugin version information...complete\nupdating plugin..."
+apt_reading_list: "Reading cloud plugin list...complete\nreading local plugin version information...complete\n"
+apt_search_no_name: How can I search without a plugin name?
 apt_search_not_found: No related plugins were found in the plugin repository.
 apt_search_result_hint: The following are the search results of the plugin repository
 apt_search_supporting: still in cycle
 apt_search_not_supporting: Abandoned treatment
-apt_plugin_name: plug-in name
+apt_plugin_name: plugin name
 apt_plugin_ver: version
 apt_plugin_section: category
 apt_plugin_maintainer: Author
