--- a/languages/built-in/zh-tw.yml
+++ b/languages/built-in/zh-tw.yml
@@ -1,5 +1,5 @@
 ---
-#Chinese (Simplified)
+#Chinese (Traditional)
 #main
 web_TypeError: Error！Web 介面綁定了一個無效網址。
 web_KeyError: Error！設定檔缺少Web介面配置。
@@ -321,7 +321,7 @@ apt_no_running_plugins: 沒有執行中的插件。
 apt_no_load_failed_plugins: 沒有加載失敗的插件
 apt_no_disabled_plugins: 沒有關閉的插件。
 apt_plugin_list: 插件列表
-apt_plugin_list_des: "使用 `-apt list <頁碼>` 跳至指定頁面。"
+apt_plugin_list_des: "使用 `,pkg list <頁碼>` 跳至指定頁面。"
 apt_plugin_running: 執行中
 apt_plugin_disabled: 已關閉
 apt_plugin_failed: 載入失敗
